prevent language btn to jump on modals

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -86,7 +86,7 @@ body:after{
 }
 
 .language {
-  z-index: 100000;
+  z-index: 100;
   a {
     background-color: #f8f8f8;
     border-color: #e7e7e7;
